# dotfiles

./: .Xresources  .aliases  .gdbinit  .gitconfig  .gitignore  .gitmodules  .muttrc  .pylintrc  .xprofile  .zprofile  .zshenv  .zshrc  install  linux
.config/: .Xmodmap  .clang-format  .zshrc_root  RetroTerminalMonoGreen.json  colemak-less  compton.conf  dconf-mate-backup  firefox-tab-group-backup.json  manual-stg-backup-2021-07-10~11-12@drive4ik.json  mimeapps.list  refind.conf  vimium-ff-old.json  vimium_c-20210626_155628.json  zshPlugAlias
.config/VirtualBox/: VirtualBox.xml
.config/alacritty/: alacritty.yml
.config/bat/: config
.config/cabal/: config
.config/clang-format/: compile_commands.json  readme
.config/clipcat/: clipcatd.toml
.config/copyq/: copyq.conf
.config/deluge/: gtk3ui.conf
.config/dunst/: dunstrc  dunstrc.template
.config/fcitx/: config  profile
.config/fd/: .ignore  ignore
.config/git/: ignore
.config/gtk-2.0/: settings.ini
.emacs.d/: init.el
.gdbinit.d/: myconfig  theme
.irssi/: config  config.autosave  startup
.ngrok2/: ngrok.yml.scr
.password-store/: .gpg-id  brave-sync.gpg  brave-sync.gpg.secret  contraseña-wifi.gpg  github.gpg  github.gpg.secret  mp.gpg.secret  nequi.gpg  nequi.gpg.secret  wifi-pass.gpg.secret
.ssh/: ssh.scr
.xmonad/: xmonad.errors  xmonad.hi  xmonad.hs
Documents/Suckless/detach-0.2.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.cache  config.status  configure  configure.in  detach  detach.spec  detach.spec.in
general/: .xprofile
zsh/: .zshenv
(+1025 files in other folders)
